# sun-fixture

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_PLAN.md  README.md  SETUP_SSH_KEY.md  deploy.sh  deploy_simple.sh  main.py  pyproject.toml  quick_deploy.sh  run_tests.sh  setup_ssh_key.sh  test_api.py  test_celestial.py  update_both_dirs.sh  update_simple.sh  update_with_expect.sh
appdaemon/apps/: apps.yaml  celestial.py
tests/: test_discovery.py  test_sun_lights.py
